--- a/federation_feeds/index.html
+++ b/federation_feeds/index.html
@@ -6,18 +6,18 @@
       "feeds": [
         {
           "id": "feed-1a",
-          "Feed": "Sambi Trial",
-          "URL": "199 SEK"
+          "feed": "Sambi Trial",
+          "url": "https://fed.sambi.se/trial/md/metadata.xml"
         },
         {
           "id": "feed-1b",
-          "Feed": "Sambi Acceptance",
-          "URL": "199 SEK"
+          "feed": "Sambi Acceptance",
+          "url": "https://fed.sambi.se/accept/md/metadata.xml"
         },
         {
           "id": "feed-1c",
-          "Feed": "Sambi Production",
-          "URL": "199 SEK"
+          "feed": "Sambi Production",
+          "url": "https://fed.sambi.se/prod/md/metadata.xml"
         }
       ]
     },
@@ -27,14 +27,14 @@
       "feeds": [
         {
           "id": "feed-2a",
-          "Feed": "Skolfederation Trial",
-          "URL": "199 SEK"
+          "feed": "Skolfederation Trial",
+          "url": "https://fed.skolfederation.se/trial/md/skolfederation-trial-3_1.xml"
         },
         {
           "id": "feed-2b",
-          "Feed": "Sambi Production",
-          "URL": "199 SEK"
-        }
+          "feed": "Skolfederation Production",
+          "url": "https://fed.skolfederation.se/prod/md/skolfederation-3_1.xml"
+        },
       ]
     }
   ]
