--- a/custom_feed_builder/index.html
+++ b/custom_feed_builder/index.html
@@ -1,6 +1,6 @@
-# 1) `index.html` — Single-file GUI (Cloudflare Pages)
+# `index.html` — fristående fil för Cloudflare Pages
 
-> Lägg denna fil som `index.html` i din Pages-site. Den laddar `metadata.json`, låter dig filtrera på `feed`, markera rader och skickar valda `entityIDs` till din Worker för publicering av filtrerat `metadata.xml`.
+> Spara som **index.html** i ditt repo. Den är helt fristående (endast HTML+CSS+JS). Du kan publicera via GitHub → Cloudflare Pages. Sätt `WORKER_BASE` här i filen till din Worker-URL.
 
 ```html
 <!doctype html>
@@ -11,43 +11,51 @@
   <meta name="robots" content="noindex, nofollow" />
   <title>SAML Metadata Selector</title>
   <style>
-    :root { --bg:#0b0f14; --panel:#11161c; --muted:#a8b3be; --text:#e6eef5; --accent:#4cc9f0; --accent2:#80ffdb; --danger:#ef4444; --ok:#22c55e; }
+    :root { --bg:#0b0f14; --panel:#0f1520; --muted:#9aa7b4; --text:#e6eef5; --accent:#4cc9f0; --accent2:#80ffdb; --line:#1f2a37; --danger:#ef4444; --ok:#22c55e; }
     * { box-sizing: border-box; }
+    html, body { height: 100%; }
     body { margin:0; font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji","Segoe UI Emoji"; background: var(--bg); color: var(--text); }
-    header { padding: 20px; border-bottom: 1px solid #1e293b; background: linear-gradient(180deg, rgba(76,201,240,.08), rgba(0,0,0,0)); }
-    h1 { margin:0 0 4px 0; font-size: 20px; }
+    a { color: var(--accent); text-decoration: none; }
+
+    header { padding: 20px; border-bottom: 1px solid var(--line); background: linear-gradient(180deg, rgba(76,201,240,.08), rgba(0,0,0,0)); }
+    h1 { margin:0 0 6px 0; font-size: 20px; }
     .sub { color: var(--muted); font-size: 12px; }
+
     .container { max-width: 1100px; margin: 0 auto; padding: 16px 20px 40px; }
+    .panel { background: var(--panel); border:1px solid var(--line); border-radius: 14px; padding: 14px; }
     .bar { display:flex; flex-wrap:wrap; gap:12px; align-items:center; margin:14px 0 18px; }
-    select, input[type="text"] { background: var(--panel); color: var(--text); border:1px solid #243041; padding:10px 12px; border-radius: 10px; outline:none; }
-    select:hover, input[type="text"]:hover { border-color:#2f4157; }
-    button { background: var(--accent); color:#001219; border:0; padding:10px 14px; border-radius: 10px; cursor:pointer; font-weight:600; }
-    button.secondary { background:#223041; color: var(--text); }
-    button.ghost { background:transparent; color: var(--text); border:1px solid #2f4157; }
-    button:disabled { opacity:.55; cursor:not-allowed; }
-    .table { width:100%; border-collapse: collapse; }
-    .table th, .table td { padding:10px 10px; border-bottom: 1px solid #1e293b; font-size: 13px; }
-    .table th { text-align:left; color: var(--muted); font-weight:600; position: sticky; top:0; background: #0e141b; z-index:1; }
-    .table tr:hover td { background: #0e141b; }
-    .pill { display:inline-block; padding:2px 8px; border-radius:999px; background:#102231; color: var(--accent2); font-size: 11px; border:1px solid #1f3347; }
-    .panel { background: #0e141b; border:1px solid #1e293b; border-radius: 14px; padding: 14px; }
     .row { display:flex; gap:10px; align-items:center; }
     .grow { flex:1; }
-    .foot { display:flex; gap:12px; align-items:center; justify-content: space-between; margin-top:14px; }
+
+    label { font-size: 12px; color: var(--muted); }
+    select, input[type="text"] { width:100%; background: #0b111a; color: var(--text); border:1px solid #223041; padding:10px 12px; border-radius: 10px; outline:none; }
+    select:hover, input[type="text"]:hover { border-color:#2b3b52; }
+    input::placeholder { color:#6b7786; }
+
+    button { background: var(--accent); color:#001219; border:0; padding:10px 14px; border-radius: 10px; cursor:pointer; font-weight:600; }
+    button.secondary { background:#223041; color: var(--text); }
+    button.ghost { background:transparent; color: var(--text); border:1px solid #2b3b52; }
+    button:disabled { opacity:.55; cursor:not-allowed; }
+
+    .scroll { max-height: 62vh; overflow:auto; border:1px solid var(--line); border-radius: 12px; }
+    .table { width:100%; border-collapse: collapse; }
+    .table th, .table td { padding:10px 10px; border-bottom: 1px solid var(--line); font-size: 13px; vertical-align: top; }
+    .table th { text-align:left; color: var(--muted); font-weight:600; position: sticky; top:0; background: #0e141b; z-index:1; }
+    .table tr:hover td { background: #0e141b; }
+
+    .pill { display:inline-block; padding:2px 8px; border-radius:999px; background:#102231; color: var(--accent2); font-size: 11px; border:1px solid #1f3347; }
+    .mono { font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace; word-break: break-all; }
     .muted { color: var(--muted); }
-    .ok { color: var(--ok); }
-    .danger { color: var(--danger); }
-    .mono { font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace; }
-    textarea { width:100%; min-height: 180px; background:#0b0f14; color:var(--text); border:1px solid #223041; border-radius: 12px; padding:10px; }
-    .scroll { max-height: 60vh; overflow:auto; border:1px solid #1e293b; border-radius: 12px; }
-    .right { text-align:right; }
+    .foot { display:flex; gap:12px; align-items:center; justify-content: space-between; margin-top:14px; flex-wrap:wrap; }
+
+    textarea { width:100%; min-height: 220px; background:#0b0f14; color:var(--text); border:1px solid #223041; border-radius: 12px; padding:10px; }
   </style>
 </head>
 <body>
   <header>
     <div class="container">
       <h1>SAML Metadata Selector</h1>
-      <div class="sub">Läser data från <span class="mono">/metadata.json</span>, filtrerar på <span class="mono">feed</span> och publicerar utvalda <span class="mono">entityID</span> via din Worker.</div>
+      <div class="sub">Läser <span class="mono">metadata.json</span>, filtrerar på <span class="mono">feed</span>, låter dig välja <span class="mono">entityID</span> och bygger filtrerat <span class="mono">metadata.xml</span> via din Cloudflare Worker.</div>
     </div>
   </header>
 
@@ -71,7 +79,7 @@
         <table class="table" id="dataTable">
           <thead>
             <tr>
-              <th style="width:36px"><input type="checkbox" id="selectAll"></th>
+              <th style="width:36px"><input type="checkbox" id="selectAll" title="Markera alla"></th>
               <th>entityID</th>
               <th>feed</th>
               <th>Namn</th>
@@ -107,35 +115,37 @@
   <script>
     // === Konfiguration ===
     const JSON_URL = "https://md-fetch-publish.rob1sun9764.workers.dev/metadata.json";
-    // Sätt din Worker-basadress här (utan avslutande slash)
-    const WORKER_BASE = ""; // Ex: "https://your-worker.your-sub.workers.dev" — lämna tomt för att bara testa klienten.
+    // Ange din Worker-basadress här (utan avslutande slash), t.ex. "https://<worker>.<sub>.workers.dev"
+    const WORKER_BASE = ""; // Lämna tomt om du bara vill testa GUI:t utan publicering.
 
     const state = { raw: [], filtered: [], selected: new Set(), feeds: new Set() };
 
-    const el = (id) => document.getElementById(id);
-    const feedFilter = el('feedFilter');
-    const searchBox  = el('searchBox');
-    const tableBody  = el('tableBody');
-    const rowCount   = el('rowCount');
-    const selCount   = el('selCount');
-    const selectAll  = el('selectAll');
-    const reloadBtn  = el('reloadBtn');
-    const copyBtn    = el('copyBtn');
-    const buildBtn   = el('buildBtn');
-    const resultPanel= el('resultPanel');
-    const xmlOut     = el('xmlOut');
-    const copyXmlBtn = el('copyXmlBtn');
-    const dlBtn      = el('dlBtn');
-    const publishInfo= el('publishInfo');
+    // === Element helpers ===
+    const $ = (id) => document.getElementById(id);
+    const feedFilter = $('feedFilter');
+    const searchBox  = $('searchBox');
+    const tableBody  = $('tableBody');
+    const rowCount   = $('rowCount');
+    const selCount   = $('selCount');
+    const selectAll  = $('selectAll');
+    const reloadBtn  = $('reloadBtn');
+    const copyBtn    = $('copyBtn');
+    const buildBtn   = $('buildBtn');
+    const resultPanel= $('resultPanel');
+    const xmlOut     = $('xmlOut');
+    const copyXmlBtn = $('copyXmlBtn');
+    const dlBtn      = $('dlBtn');
+    const publishInfo= $('publishInfo');
 
+    // === Datahämtning ===
     async function loadJson(){
       try{
-        const res = await fetch(JSON_URL, { credentials: 'omit' });
+        const res = await fetch(JSON_URL, { credentials: 'omit', cache: 'no-store' });
         if(!res.ok) throw new Error(`HTTP ${res.status}`);
         const data = await res.json();
-        // Förväntat: array av objekt { entityID, feed, name?, url? }
+        // Förväntat format: array av objekt { entityID, feed, name?, url? }
         state.raw = Array.isArray(data) ? data : (data.items || []);
-        // Samla feeds
+        // Feeds
         state.feeds = new Set(state.raw.map(x => x.feed).filter(Boolean));
         renderFeedOptions();
         applyFilter();
@@ -145,11 +155,10 @@
     }
 
     function renderFeedOptions(){
-      const sel = feedFilter;
-      sel.innerHTML = '';
-      const optAll = document.createElement('option'); optAll.value=''; optAll.textContent='Alla feeds'; sel.appendChild(optAll);
+      feedFilter.innerHTML = '';
+      const optAll = document.createElement('option'); optAll.value=''; optAll.textContent='Alla feeds'; feedFilter.appendChild(optAll);
       [...state.feeds].sort((a,b)=>String(a).localeCompare(String(b))).forEach(feed=>{
-        const o = document.createElement('option'); o.value = feed; o.textContent = feed; sel.appendChild(o);
+        const o = document.createElement('option'); o.value = feed; o.textContent = feed; feedFilter.appendChild(o);
       });
     }
 
@@ -173,19 +182,14 @@
 
         const td0 = document.createElement('td');
         const cb = document.createElement('input'); cb.type='checkbox'; cb.checked = state.selected.has(id);
-        cb.addEventListener('change', ()=>{
-          if(cb.checked) state.selected.add(id); else state.selected.delete(id);
-          updateCounts();
-        });
+        cb.addEventListener('change', ()=>{ if(cb.checked) state.selected.add(id); else state.selected.delete(id); updateCounts(); });
         td0.appendChild(cb);
 
         const td1 = document.createElement('td'); td1.textContent = id; td1.className='mono';
-        const td2 = document.createElement('td'); td2.innerHTML = item.feed ? `<span class="pill">${item.feed}</span>` : '';
+        const td2 = document.createElement('td'); td2.innerHTML = item.feed ? `<span class="pill">${escapeHtml(String(item.feed))}</span>` : '';
         const td3 = document.createElement('td'); td3.textContent = item.name || '';
         const td4 = document.createElement('td');
         if(item.url){ const a = document.createElement('a'); a.href=item.url; a.textContent=item.url; a.target='_blank'; a.rel='noreferrer noopener'; td4.appendChild(a); }
-        else { td4.textContent=''; }
-
         tr.append(td0, td1, td2, td3, td4);
         tableBody.appendChild(tr);
       });
@@ -209,10 +213,7 @@
     }
 
     async function buildXml(){
-      if(!WORKER_BASE){
-        alert('Sätt WORKER_BASE längst upp i scriptet till din Worker-URL.');
-        return;
-      }
+      if(!WORKER_BASE){ alert('Sätt WORKER_BASE i filen.'); return; }
       try{
         const payload = { entityIDs: [...state.selected] };
         const res = await fetch(WORKER_BASE + '/build', {
@@ -231,8 +232,7 @@
     function downloadXml(){
       const blob = new Blob([xmlOut.value||''], { type: 'application/samlmetadata+xml' });
       const url = URL.createObjectURL(blob);
-      const a = document.createElement('a');
-      a.href = url; a.download = 'metadata_filtered.xml'; a.click();
+      const a = document.createElement('a'); a.href = url; a.download = 'metadata_filtered.xml'; a.click();
       setTimeout(()=>URL.revokeObjectURL(url), 2000);
     }
 
@@ -242,7 +242,12 @@
       setTimeout(()=>copyXmlBtn.textContent='Kopiera XML', 1200);
     }
 
-    // Event wiring
+    // Småhjälp
+    function escapeHtml(s){
+      return String(s).replace(/[&<>"']/g, c => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;','\'':'&#39;'}[c]));
+    }
+
+    // === Wiring ===
     reloadBtn.addEventListener('click', loadJson);
     feedFilter.addEventListener('change', applyFilter);
     searchBox.addEventListener('input', applyFilter);
@@ -263,147 +268,4 @@
 </html>
 ```
 
----
-
-# 2) `worker.js` — Cloudflare Worker (ingen GUI)
-
-> Skapar filtrerat `metadata.xml` från valda `entityIDs`. Bygger på en enkel, robust regex-extraktion av `<EntityDescriptor …>…</EntityDescriptor>`-block ur källan. Inkluderar CORS-stöd.
->
-> **Deploy:** Lägg upp i Cloudflare Dashboard → Workers → Create → Quick edit → klistra in. (Utan Wrangler.)
->
-> **Valfria bindings:** Inga krävs. (Vill du spara resultatet kan du senare lägga till KV/R2.)
-
-```js
-export default {
-  async fetch(request, env, ctx) {
-    const url = new URL(request.url);
-
-    // --- CORS ---
-    if (request.method === 'OPTIONS') {
-      return new Response(null, { headers: corsHeaders(request.headers.get('Origin')) });
-    }
-
-    if (url.pathname === '/health') {
-      return new Response('ok', { headers: corsHeaders(request.headers.get('Origin')) });
-    }
-
-    if (url.pathname === '/build' && request.method === 'POST') {
-      try {
-        const origin = request.headers.get('Origin');
-        const body = await request.json();
-        const ids = Array.isArray(body?.entityIDs) ? body.entityIDs : [];
-        if (!ids.length) {
-          return new Response(JSON.stringify({ error: 'No entityIDs provided' }), { status: 400, headers: { ...corsHeaders(origin), 'Content-Type': 'application/json' } });
-        }
-
-        // Hämta full metadata.xml (källan)
-        const src = 'https://md-fetch-publish.rob1sun9764.workers.dev/metadata.xml';
-        const res = await fetch(src, { cf: { cacheTtl: 300, cacheEverything: true } });
-        if (!res.ok) throw new Error(`Upstream ${res.status}`);
-        const xml = await res.text();
-
-        // Plocka ut EntityDescriptor-block för valda IDs
-        const blocks = extractEntityDescriptors(xml, ids);
-        if (!blocks.length) {
-          return new Response(JSON.stringify({ error: 'No matching EntityDescriptor found for provided IDs' }), { status: 404, headers: { ...corsHeaders(origin), 'Content-Type': 'application/json' } });
-        }
-
-        const out = wrapEntitiesDescriptor(blocks, {
-          name: 'filtered',
-          source: src,
-          count: blocks.length,
-        });
-
-        const headers = {
-          ...corsHeaders(origin),
-          'Content-Type': 'application/samlmetadata+xml; charset=utf-8',
-          'Cache-Control': 'no-store',
-          'X-Robots-Tag': 'noindex, nofollow',
-          'Content-Disposition': 'inline; filename="metadata_filtered.xml"',
-        };
-        return new Response(out, { status: 200, headers });
-      } catch (err) {
-        return new Response(JSON.stringify({ error: String(err?.message || err) }), { status: 500, headers: { ...corsHeaders(request.headers.get('Origin')), 'Content-Type': 'application/json' } });
-      }
-    }
-
-    return new Response('Not found', { status: 404, headers: corsHeaders(request.headers.get('Origin')) });
-  }
-};
-
-function corsHeaders(origin) {
-  // Tillåt alla som default; sätt gärna din Pages-origin här för striktare policy
-  const allowOrigin = origin || '*';
-  return {
-    'Access-Control-Allow-Origin': allowOrigin,
-    'Access-Control-Allow-Methods': 'GET, POST, OPTIONS',
-    'Access-Control-Allow-Headers': 'Content-Type',
-  };
-}
-
-function extractEntityDescriptors(xml, entityIDs) {
-  // Bygg regex för varje entityID och samla matchade block
-  const blocks = [];
-  for (const id of entityIDs) {
-    const safe = escapeRegex(String(id));
-    const re = new RegExp(
-      `<EntityDescriptor[^>]*?entityID=\"${safe}\"[\s\S]*?<\/EntityDescriptor>`,
-      'i'
-    );
-    const m = xml.match(re);
-    if (m) blocks.push(m[0]);
-  }
-  return blocks;
-}
-
-function wrapEntitiesDescriptor(blocks, meta) {
-  const now = new Date().toISOString();
-  return [
-    `<?xml version="1.0" encoding="UTF-8"?>`,
-    `<EntitiesDescriptor xmlns=\"urn:oasis:names:tc:SAML:2.0:metadata\" Name=\"${xmlEscape(meta.name)}\" xmlns:ds=\"http://www.w3.org/2000/09/xmldsig#\">`,
-    `  <!-- Generated: ${now} -->`,
-    `  <!-- Source: ${meta.source} -->`,
-    `  <!-- Count: ${meta.count} -->`,
-    blocks.join('\n\n'),
-    `</EntitiesDescriptor>`
-  ].join('\n');
-}
-
-function escapeRegex(s) {
-  return s.replace(/[.*+?^${}()|[\]\\]/g, r => `\\${r}`);
-}
-
-function xmlEscape(s='') {
-  return String(s)
-    .replace(/&/g, '&amp;')
-    .replace(/</g, '&lt;')
-    .replace(/>/g, '&gt;')
-    .replace(/\"/g, '&quot;')
-    .replace(/'/g, '&apos;');
-}
-```
-
----
-
-## Snabbguide
-
-1. **Publicera GUI**
-
-* Skapa en ny Pages-site och lägg in `index.html` ovan.
-* Öppna filen och sätt `WORKER_BASE` till din Worker-URL.
-
-2. **Publicera Worker**
-
-* Skapa en Worker → klistra in `worker.js` → deploya.
-* Testa `POST https://<din-worker>/build` med `{"entityIDs":["…","…"]}`.
-
-3. **Körflöde**
-
-* GUI läser `metadata.json` → filtrerar på `feed` och sök → du markerar rader → **Skapa & publicera XML**.
-* Worker hämtar `metadata.xml`, extraherar valda `<EntityDescriptor>` och svarar med ett nytt `EntitiesDescriptor`-dokument.
-
-> **Noteringar:**
->
-> * Om `metadata.json` saknar CORS kan du tillfälligt lägga en proxy-route i samma Worker som returnerar JSON med CORS.
-> * Regex-extraktion är pragmatisk och fungerar väl för typisk SAML-metadata. Vill du hårdna, kan vi byta till en riktig XML-parser i en bundlad Worker (t.ex. `fast-xml-parser`).
-> * Både GUI och Worker sätter `noindex`. Vill du tillåta indexering någonstans, ta bort meta-/header-raderna.
+**Tips:** Om `metadata.json` kräver CORS: lägg till en `/proxy-json` i din Worker som hämtar samma länk med `cf: { cacheEverything:true }` och returnerar `Access-Control-Allow-Origin: *`. Säg till om du vill att jag skriver den routen också.
