--- a/custom_feed_builder/index.html
+++ b/custom_feed_builder/index.html
@@ -108,156 +108,194 @@
   </main>
 
   <script>
-    // === Konfiguration ===
-    const JSON_URL = "https://md-fetch-publish.rob1sun9764.workers.dev/metadata.json";
-    // Ange din Worker-basadress här (utan avslutande slash), t.ex. "https://<worker>.<sub>.workers.dev"
-    const WORKER_BASE = "https://wandering-wind-5266.rob1sun9764.workers.dev/"; // Lämna tomt om du bara vill testa GUI:t utan publicering.
+  // === Konfiguration ===
+  const JSON_URL = "https://md-fetch-publish.rob1sun9764.workers.dev/metadata.json";
+  // Ange din Worker-basadress här (utan avslutande slash), t.ex. "https://<worker>.<sub>.workers.dev"
+  const WORKER_BASE = ""; // Lämna tomt om du bara vill testa GUI:t utan publicering.
 
-    const state = { raw: [], filtered: [], selected: new Set(), feeds: new Set() };
+  const state = {
+    raw: [],           // [{ entityID, feed, name, url? }]
+    filtered: [],
+    selected: new Set(),
+    feeds: new Set(),
+    meta: { updatedAt: "", totalEntities: 0 },
+  };
 
-    // === Element helpers ===
-    const $ = (id) => document.getElementById(id);
-    const feedFilter = $('feedFilter');
-    const searchBox  = $('searchBox');
-    const tableBody  = $('tableBody');
-    const rowCount   = $('rowCount');
-    const selCount   = $('selCount');
-    const selectAll  = $('selectAll');
-    const reloadBtn  = $('reloadBtn');
-    const copyBtn    = $('copyBtn');
-    const buildBtn   = $('buildBtn');
-    const resultPanel= $('resultPanel');
-    const xmlOut     = $('xmlOut');
-    const copyXmlBtn = $('copyXmlBtn');
-    const dlBtn      = $('dlBtn');
-    const publishInfo= $('publishInfo');
+  // === Element helpers ===
+  const $ = (id) => document.getElementById(id);
+  const feedFilter = $("feedFilter");
+  const searchBox  = $("searchBox");
+  const tableBody  = $("tableBody");
+  const rowCount   = $("rowCount");
+  const selCount   = $("selCount");
+  const selectAll  = $("selectAll");
+  const reloadBtn  = $("reloadBtn");
+  const copyBtn    = $("copyBtn");
+  const buildBtn   = $("buildBtn");
+  const resultPanel= $("resultPanel");
+  const xmlOut     = $("xmlOut");
+  const copyXmlBtn = $("copyXmlBtn");
+  const dlBtn      = $("dlBtn");
+  const publishInfo= $("publishInfo");
 
-    // === Datahämtning ===
-    async function loadJson(){
-      try{
-        const res = await fetch(JSON_URL, { credentials: 'omit', cache: 'no-store' });
-        if(!res.ok) throw new Error(`HTTP ${res.status}`);
-        const data = await res.json();
-        // Förväntat format: array av objekt { entityID, feed, name?, url? }
-        state.raw = Array.isArray(data) ? data : (data.items || []);
-        // Feeds
-        state.feeds = new Set(state.raw.map(x => x.feed).filter(Boolean));
-        renderFeedOptions();
-        applyFilter();
-      }catch(err){
-        alert('Kunde inte läsa metadata.json: ' + err.message);
-      }
+  // === Datahämtning och normalisering (matchar din JSON-struktur) ===
+  async function loadJson(){
+    try{
+      const res = await fetch(JSON_URL, { credentials: "omit", cache: "no-store" });
+      if(!res.ok) throw new Error(`HTTP ${res.status}`);
+      const data = await res.json();
+
+      // Förväntad struktur enligt exempel:
+      // { updatedAt: "2025-10-18T...", totalEntities: 792, entities: [ { entityID, organizationName, organizationDisplayName, feed } ] }
+      state.meta.updatedAt     = String(data?.updatedAt || "");
+      state.meta.totalEntities = Number(data?.totalEntities || 0);
+
+      const arr = Array.isArray(data?.entities) ? data.entities : [];
+      state.raw = arr.map(row => {
+        const entityID = String(row?.entityID || "");
+        const feed     = String(row?.feed || "");
+        const name     = String(row?.organizationDisplayName || row?.organizationName || "");
+        // URL finns inte i ditt exempel — lämnas tomt
+        return { entityID, feed, name, url: "" };
+      }).filter(x => x.entityID);
+
+      state.feeds = new Set(state.raw.map(x => x.feed).filter(Boolean));
+      renderFeedOptions();
+      applyFilter();
+    }catch(err){
+      alert("Kunde inte läsa metadata.json: " + err.message);
     }
+  }
 
-    function renderFeedOptions(){
-      feedFilter.innerHTML = '';
-      const optAll = document.createElement('option'); optAll.value=''; optAll.textContent='Alla feeds'; feedFilter.appendChild(optAll);
-      [...state.feeds].sort((a,b)=>String(a).localeCompare(String(b))).forEach(feed=>{
-        const o = document.createElement('option'); o.value = feed; o.textContent = feed; feedFilter.appendChild(o);
-      });
-    }
+  // === UI render ===
+  function renderFeedOptions(){
+    feedFilter.innerHTML = "";
+    const optAll = document.createElement("option"); optAll.value=""; optAll.textContent="Alla feeds"; feedFilter.appendChild(optAll);
+    [...state.feeds].sort((a,b)=>String(a).localeCompare(String(b))).forEach(feed=>{
+      const o = document.createElement("option");
+      o.value = feed;
+      o.textContent = feed;
+      feedFilter.appendChild(o);
+    });
+  }
 
-    function applyFilter(){
-      const f = feedFilter.value.trim().toLowerCase();
-      const q = searchBox.value.trim().toLowerCase();
-      state.filtered = state.raw.filter(item=>{
-        const matchesFeed = !f || String(item.feed||'').toLowerCase() === f;
-        const hay = [item.entityID, item.name, item.url, item.feed].map(v=>String(v||'').toLowerCase()).join(' ');
-        const matchesSearch = !q || hay.includes(q);
-        return matchesFeed && matchesSearch;
-      });
-      renderTable();
-    }
+  function applyFilter(){
+    const f = feedFilter.value.trim().toLowerCase();
+    const q = searchBox.value.trim().toLowerCase();
+    state.filtered = state.raw.filter(item=>{
+      const matchesFeed = !f || String(item.feed||"").toLowerCase() === f;
+      const hay = [item.entityID, item.name, item.url, item.feed].map(v=>String(v||"").toLowerCase()).join(" ");
+      const matchesSearch = !q || hay.includes(q);
+      return matchesFeed && matchesSearch;
+    });
+    renderTable();
+  }
 
-    function renderTable(){
-      tableBody.innerHTML = '';
+  function renderTable(){
+    tableBody.innerHTML = "";
+    if (state.filtered.length === 0) {
+      const tr = document.createElement("tr");
+      const td = document.createElement("td");
+      td.colSpan = 5;
+      td.className = "muted";
+      td.textContent = "Inga poster hittades. Kontrollera filter/sök.";
+      tr.appendChild(td);
+      tableBody.appendChild(tr);
+    } else {
       state.filtered.forEach(item=>{
-        const tr = document.createElement('tr');
-        const id = item.entityID || '';
+        const tr = document.createElement("tr");
+        const id = item.entityID || "";
 
-        const td0 = document.createElement('td');
-        const cb = document.createElement('input'); cb.type='checkbox'; cb.checked = state.selected.has(id);
-        cb.addEventListener('change', ()=>{ if(cb.checked) state.selected.add(id); else state.selected.delete(id); updateCounts(); });
+        const td0 = document.createElement("td");
+        const cb = document.createElement("input"); cb.type="checkbox"; cb.checked = state.selected.has(id);
+        cb.addEventListener("change", ()=>{
+          if(cb.checked) state.selected.add(id); else state.selected.delete(id);
+          updateCounts();
+        });
         td0.appendChild(cb);
 
-        const td1 = document.createElement('td'); td1.textContent = id; td1.className='mono';
-        const td2 = document.createElement('td'); td2.innerHTML = item.feed ? `<span class="pill">${escapeHtml(String(item.feed))}</span>` : '';
-        const td3 = document.createElement('td'); td3.textContent = item.name || '';
-        const td4 = document.createElement('td');
-        if(item.url){ const a = document.createElement('a'); a.href=item.url; a.textContent=item.url; a.target='_blank'; a.rel='noreferrer noopener'; td4.appendChild(a); }
+        const td1 = document.createElement("td"); td1.textContent = id; td1.className="mono";
+        const td2 = document.createElement("td"); td2.innerHTML = item.feed ? `<span class="pill">${escapeHtml(String(item.feed))}</span>` : "";
+        const td3 = document.createElement("td"); td3.textContent = item.name || "";
+        const td4 = document.createElement("td"); // URL saknas i datat
         tr.append(td0, td1, td2, td3, td4);
         tableBody.appendChild(tr);
       });
-      updateCounts();
     }
+    updateCounts();
+  }
 
-    function updateCounts(){
-      rowCount.textContent = state.filtered.length;
-      selCount.textContent = state.selected.size;
-      copyBtn.disabled = state.selected.size === 0;
-      buildBtn.disabled = state.selected.size === 0 || !WORKER_BASE;
-      selectAll.checked = state.filtered.length>0 && state.filtered.every(it=>state.selected.has(it.entityID||''));
-    }
+  function updateCounts(){
+    rowCount.textContent = state.filtered.length;
+    selCount.textContent = state.selected.size;
+    copyBtn.disabled = state.selected.size === 0;
+    buildBtn.disabled = state.selected.size === 0 || !WORKER_BASE;
+    selectAll.checked = state.filtered.length>0 && state.filtered.every(it=>state.selected.has(it.entityID||""));
+  }
 
-    function copySelected(){
-      const ids = [...state.selected];
-      navigator.clipboard.writeText(JSON.stringify(ids, null, 2)).then(()=>{
-        copyBtn.textContent = 'Kopierat!';
-        setTimeout(()=>copyBtn.textContent='Kopiera valda IDs', 1200);
-      });
-    }
-
-    async function buildXml(){
-      if(!WORKER_BASE){ alert('Sätt WORKER_BASE i filen.'); return; }
-      try{
-        const payload = { entityIDs: [...state.selected] };
-        const res = await fetch(WORKER_BASE + '/build', {
-          method:'POST', headers:{ 'Content-Type':'application/json' }, body: JSON.stringify(payload)
-        });
-        if(!res.ok){ throw new Error(`HTTP ${res.status}`); }
-        const xml = await res.text();
-        xmlOut.value = xml;
-        resultPanel.style.display = '';
-        publishInfo.innerHTML = `Publicerat från Worker-endpointen <span class="mono">/build</span>.`;
-      }catch(err){
-        alert('Kunde inte bygga/publicera XML: ' + err.message);
-      }
-    }
-
-    function downloadXml(){
-      const blob = new Blob([xmlOut.value||''], { type: 'application/samlmetadata+xml' });
-      const url = URL.createObjectURL(blob);
-      const a = document.createElement('a'); a.href = url; a.download = 'metadata_filtered.xml'; a.click();
-      setTimeout(()=>URL.revokeObjectURL(url), 2000);
-    }
-
-    function copyXml(){
-      navigator.clipboard.writeText(xmlOut.value||'');
-      copyXmlBtn.textContent='Kopierat!';
-      setTimeout(()=>copyXmlBtn.textContent='Kopiera XML', 1200);
-    }
-
-    // Småhjälp
-    function escapeHtml(s){
-      return String(s).replace(/[&<>"']/g, c => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[c]));
-    }
-
-    // === Wiring ===
-    reloadBtn.addEventListener('click', loadJson);
-    feedFilter.addEventListener('change', applyFilter);
-    searchBox.addEventListener('input', applyFilter);
-    selectAll.addEventListener('change', ()=>{
-      if(selectAll.checked){ state.filtered.forEach(it=>state.selected.add(it.entityID||'')); }
-      else { state.filtered.forEach(it=>state.selected.delete(it.entityID||'')); }
-      renderTable();
+  // === Actions ===
+  function copySelected(){
+    const ids = [...state.selected];
+    navigator.clipboard.writeText(JSON.stringify(ids, null, 2)).then(()=>{
+      copyBtn.textContent = "Kopierat!";
+      setTimeout(()=>copyBtn.textContent="Kopiera valda IDs", 1200);
     });
-    copyBtn.addEventListener('click', copySelected);
-    buildBtn.addEventListener('click', buildXml);
-    dlBtn.addEventListener('click', downloadXml);
-    copyXmlBtn.addEventListener('click', copyXml);
+  }
 
-    // Init
-    loadJson();
-  </script>
+  async function buildXml(){
+    if(!WORKER_BASE){ alert("Sätt WORKER_BASE i scriptet."); return; }
+    try{
+      const payload = { entityIDs: [...state.selected] };
+      const res = await fetch(WORKER_BASE + "/build", {
+        method:"POST",
+        headers:{ "Content-Type":"application/json" },
+        body: JSON.stringify(payload)
+      });
+      if(!res.ok){ throw new Error(`HTTP ${res.status}`); }
+      const xml = await res.text();
+      xmlOut.value = xml;
+      resultPanel.style.display = "";
+      publishInfo.innerHTML = `Publicerat från Worker-endpointen <span class="mono">/build</span>.`;
+    }catch(err){
+      alert("Kunde inte bygga/publicera XML: " + err.message);
+    }
+  }
+
+  function downloadXml(){
+    const blob = new Blob([xmlOut.value||""], { type: "application/samlmetadata+xml" });
+    const url = URL.createObjectURL(blob);
+    const a = document.createElement("a"); a.href = url; a.download = "metadata_filtered.xml"; a.click();
+    setTimeout(()=>URL.revokeObjectURL(url), 2000);
+  }
+
+  function copyXml(){
+    navigator.clipboard.writeText(xmlOut.value||"");
+    copyXmlBtn.textContent="Kopierat!";
+    setTimeout(()=>copyXmlBtn.textContent="Kopiera XML", 1200);
+  }
+
+  // Småhjälp
+  function escapeHtml(s){
+    return String(s).replace(/[&<>"']/g, c => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[c]));
+  }
+
+  // === Wiring ===
+  reloadBtn.addEventListener("click", loadJson);
+  feedFilter.addEventListener("change", applyFilter);
+  searchBox.addEventListener("input", applyFilter);
+  selectAll.addEventListener("change", ()=>{
+    if(selectAll.checked){ state.filtered.forEach(it=>state.selected.add(it.entityID||"")); }
+    else { state.filtered.forEach(it=>state.selected.delete(it.entityID||"")); }
+    renderTable();
+  });
+  copyBtn.addEventListener("click", copySelected);
+  buildBtn.addEventListener("click", buildXml);
+  dlBtn.addEventListener("click", downloadXml);
+  copyXmlBtn.addEventListener("click", copyXml);
+
+  // Init
+  loadJson();
+</script>
+
 </body>
 </html>
