--- a/custom_feed_builder/index.html
+++ b/custom_feed_builder/index.html
@@ -111,7 +111,7 @@
   // === Konfiguration ===
   const JSON_URL = "https://md-fetch-publish.rob1sun9764.workers.dev/metadata.json";
   // Ange din Worker-basadress här (utan avslutande slash), t.ex. "https://<worker>.<sub>.workers.dev"
-  const WORKER_BASE = ""; // Lämna tomt om du bara vill testa GUI:t utan publicering.
+  const WORKER_BASE = "https://wandering-wind-5266.rob1sun9764.workers.dev/"; // Lämna tomt om du bara vill testa GUI:t utan publicering.
 
   const state = {
     raw: [],           // [{ entityID, feed, name, url? }]
